syntax = "proto3";
package com.linseven.chatroom.model;
option java_package ="com.linseven.chatroom.model";
message UnReadMsgRequest {
    string username=1;
    string token = 2;
}